<resources>
    <string name="app_name">爱尚旅居</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    AiShang
    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>

    <string name="cube_views_load_more_loading">loading...</string>
    <string name="cube_views_load_more_click_to_load_more">Click to load more</string>
    <string name="cube_views_load_more_loaded_no_more">All the data has been loaded</string>
    <string name="cube_views_load_more_loaded_empty">It is empty. :(</string>
    <string name="cube_views_load_more_error">Load error, click to retry</string>
    <string name="dialog_Ok_title">成功</string>

    <string name="room_num">%d间</string>
    <string name="huangzujiudian">换住度假屋</string>
    <string name="zaishou">在售度假屋</string>
    <string name="youji">行程游记</string>
    <string name="xiangmuhezuo">项目合作</string>
    <string name="dujiawu">度假屋托管</string>
    <string name="kanfangduan">旅游活动</string>
    <string name="fabuzushou">交易中心</string>
    <string name="store">商城</string>
    <string name="look_more">查看更多</string>
    <string name="hot_hotel">热门度假屋</string>
    <string name="book_hotel">预订</string>
    <string name="yi_jian_fang_kui">意见反馈</string>
    <string name="check_updata">检查更新</string>
    <string name="share_ai_shang">分享爱尚旅居</string>
    <string name="setting">设置</string>
    <string name="more">更多</string>
    <string name="position">地区</string>
    <string name="type">类型</string>
    <string name="price">价格</string>
    <string name="tese">特色</string>
    <string name="look_youji">查看游记攻略</string>
    <string name="loupan_detail">楼盘简介</string>
    <string name="xiang_mu_te_se_jie_shao">项目特色介绍</string>
    <string name="can_tuan">报名参团</string>
    <string name="buy_now">立即认购</string>
    <string name="buy_hotel">立即预定</string>
    <string name="take_phone">立即咨询</string>
    <string name="take_online">在线咨询</string>
    <string name="check_in_date">入住日期</string>
    <string name="check_out_date">退房日期</string>
    <string name="price_line">价格走势</string>
    <string name="traffic_position">交通位置</string>

    <string name="newUpdateAvailable">发现新版本</string>
    <string name="updata_now">立即下载</string>
    <string name="updata_next">以后再说</string>
    <string name="app_no_new_update">没有发现新版本</string>
    <string name="download_progress">正在下载:%1$d%%</string>
    <string name="download_success">下载完成，点击安装</string>
    <string name="ge_ren_zhong_xin">个人中心</string>
    <string name="zhong_hu_zhong_xin">账户中心</string>
    <string name="wo_de_ding_dang">旅居订单</string>
    <string name="wo_de_fang_chang">我的房产</string>
    <string name="jin_ji_ren_zhong_xin">经纪人中心</string>
    <string name="you_ji_shou_chang_jia">游记收藏夹</string>
    <string name="chong_zi_ti_xian">充值提现</string>
    <string name="wo_de_zu_shou">我的租售</string>
    <string name="guan_yu_wo_men">关于我们</string>
    <string name="travel_card">旅居卡</string>

    <string name="time">时间</string>
    <string name="city">城市</string>
    <string name="move_in_date">交房日期:%s</string>
    <string name="product_address">项目地址:%s</string>
    <string name="promotion">特         色：%s</string>
    <string name="no_data">暂无数据</string>
    <string name="unlimited">不限</string>
    <string name="zone_select">区域选择</string>
    <string name="no_phone">电话不能为空</string>
    <string name="error_phone">请输入正确的电话号码</string>
    <string name="error_password">输入密码有误</string>

    <string name="login_nameorpsw_wrong">手机号或密码错误</string>
    <string name="login_memberLocked">用户被锁定</string>
    <string name="login_memberNotActived">用户未激活</string>
    <string name="login_changePassword">请修改密码</string>
    <string name="member_account">旅居账号:%s</string>
    <string name="no_net">无网络连接</string>
    <string name="price_select">价格选择</string>
    <string name="type_select">类型选择</string>
    <string name="star_level_select">星级选择</string>
    <string name="date_error">退房日期必须大于入住日期</string>
    <string name="loupan_type">类&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型:%s</string>
    <string name="loupan_num">房&#160;&#160;&#160;&#160;号:%s</string>

    <string name="loupan_address">物业地址:%s</string>
    <string name="loupan_phone">售楼电话:%s</string>
    <string name="loupan_tourist">所在景区:%s</string>
    <string name="loupan_company">开 发 商:%s</string>
    <string name="loupan_move_in_date">交房时间:%s</string>
    <string name="loupan_open_date">开盘时间:%s</string>
    <string name="loupan_price">市场价格:%.2f元/份 （十二分之一产权）</string>
    <string name="loupan_land_area">占地面积:%s</string>
    <string name="loupan_building_area">建筑面积:%s</string>
    <string name="loupan_usage_ratio">容 积 率:%s</string>
    <string name="loupan_product_name">项目名称:%s</string>
    <string name="loupan_price_jifen">换住积分:%s</string>
    <string name="loupan_effective_year">房产证:%s</string>
    <string name="error_not_login">您没有登录</string>
    <string name="head_img">头像</string>
    <string name="member_level">会员等级</string>
    <string name="phone_num">电话号码</string>
    <string name="member_name">昵称</string>
    <string name="member_real_name">真实姓名</string>
    <string name="birthday">出生日期</string>
    <string name="gender">性别</string>
    <string name="bank_member">银行帐号</string>
    <string name="email">邮箱</string>
    <string name="change_pwd">修改密码</string>
    <string name="contacts_add">推荐客户</string>
    <string name="push">提交</string>
    <string name="no_name">名字不能为空</string>
    <string name="jianjie">简介</string>

    <string name="posting">正在提交数据...</string>

    <string name="save">保存</string>

    <string name="add">添加</string>

  <string name="holiday_house_rule">
\t\t\t\t\t爱尚旅居——中国首个共权度假屋共享换住平台，由重庆耘目实业有限公司倾力打造，提供共权度假屋网上展示、申购、预订、换住以及出租、出售服务的共权度假屋综合服务网络平台。\n
\t\t\t\t\t度假交换服务\n
\t\t\t\t\t1、乙方将房屋旺季的使用权交给甲方，由甲方进行运营，鉴于乙方房屋所处的区位及气候特点，人气居住率，运营等综合因素，甲方平台能接受的乙方房屋可交换权益积分。\n
\t\t\t\t\t2、甲方提供乙方在爱尚旅居平台免费度假交换权益。乙方登陆爱尚旅居平台账户后，仅需根据度假需求选择物业，凭积分预订入住即可。 (注：积分换算公式 区域一个间夜价格X天数=换住积分。例 当地房屋间夜价格为300元/晚，权益为20天，则积分为：300X20=6000积分)\n
\t\t\t\t\t3、甲方运营期间，所产生的水、电、燃气、有线电视、电话、宽带等费用，由甲方承担。 注意：因为甲方已经给予乙方每年固定的交换度假权益，甲方运营期间内，房屋使用权益归甲方所有乙方不得入住。期间运营亏损归甲方承担，同理如产生收益也归甲方所有。\n
  </string>
  <string name="project_rule">
    \t\t\t\t\t爱尚旅居——中国首个共权度假屋共享换住平台，由重庆耘目实业有限公司倾力打造，提供共权度假屋网上展示、申购、预订、换住以及出租、出售服务的共权度假屋综合服务网络平台。\n
    项目合作服务\n
    \t\t\t\t\t1、乙方将房屋旺季的使用权交给甲方，由甲方进行运营，鉴于乙方房屋所处的区位及气候特点，人气居住率，运营等综合因素，甲方平台能接受的乙方房屋可交换权益为每天为多少积分。\n
    \t\t\t\t\t2、甲方提供乙方在爱尚旅居平台免费度假交换权益为天（积分）。乙方登陆爱尚旅居平台账户后，仅需根据度假需求选择物业，凭积分预订入住即可。(注：积分换算公式 区域一个间夜价格X天数=换住积分。例 当地房屋间夜价格为300元/晚，权益为20天，则积分为：300X20=6000积分)\n
    \t\t\t\t\t3、甲方运营期间，所产生的水、电、燃气、有线电视、电话、宽带等费用，由甲方承担。\n
    \t\t\t\t\t注意：因为甲方已经给予乙方每年固定的交换度假权益，甲方运营期间内，房屋使用权益归甲方所有乙方不得入住。期间运营亏损归甲方承担，同理如产生收益也归甲方所有。\n
  </string>
    <string name="hotel_checkin_rule">会员入住规定:9岁儿童在不加床的情况下随父母住，不收取额外费用（不包含早餐）；9-12岁儿童加床为35USD/人/晚（包含早餐）</string>

    <string name="start">星级</string>
    <string name="clear_cache">您确定要清除缓存！</string>
    <string name="intent_login">您没有登录，是否立即登录！</string>
    <string name="share">分享</string>
    <string name="pinglun">评论</string>
    <string name="shoucang">收藏</string>
    <string name="dianzan">点赞</string>
    <string name="select_bank">选择银行</string>
    <string name="xing_cheng_jian_jie">行程简介</string>
    <string name="chong_zi_jin_e">充值金额</string>
    <string name="bank">开户行</string>
    <string name="dui_fang_zhan_hao">对方账号</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trave_server">旅游服务</string>

</resources>
