<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/spacing_large"
      android:layout_marginRight="@dimen/spacing_large"
      android:layout_marginTop="@dimen/spacing_medium"
      android:text="重庆爱旅科技有限公司"
      android:textColor="@android:color/black"
      android:textSize="@dimen/text_large_body"/>

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/spacing_medium"
      android:background="@color/space"/>


  <com.aishang.app.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/spacing_large"
      app:editable="false"
      app:hint="@string/bank">

  </com.aishang.app.widget.TextInputLayout>

  <com.aishang.app.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/spacing_large"
      app:editable="false"
      app:hint="@string/dui_fang_zhan_hao">

  </com.aishang.app.widget.TextInputLayout>

  <com.aishang.app.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/spacing_large"
      app:editable="false"
      app:hint="@string/chong_zi_jin_e">

  </com.aishang.app.widget.TextInputLayout>
</LinearLayout>
