<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingTop="@dimen/padding_stutas_bar">

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/primary">

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/kanfangduan"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_title"/>
  </android.support.v7.widget.Toolbar>

  <com.quinny898.library.persistentsearch.SearchBox
      android:id="@+id/searchbox"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginLeft="-6dp"
      android:layout_marginRight="-6dp"
      android:layout_marginTop="-6dp"
      android:visibility="gone"/>

  <LinearLayout
      android:id="@+id/ll_sreach"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/toolbar"
      android:background="@android:color/white"
      android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableRight="@mipmap/jiantou"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="@string/position"/>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableRight="@mipmap/jiantou"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="@string/price"/>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableRight="@mipmap/jiantou"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="@string/time"/>
  </LinearLayout>

  <View
      android:id="@+id/view_line"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/ll_sreach"
      android:background="@android:color/darker_gray"/>

  <com.jcodecraeer.xrecyclerview.XRecyclerView
      android:id="@+id/swipe_refresh"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/view_line"
      android:background="@android:color/white"/>

</RelativeLayout>