<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingTop="@dimen/padding_stutas_bar"
    tools:context="com.aishang.app.ui.MemberCenter.MemberCenterActivity">

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/primary"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
      app:theme="@style/ToolBarStyle">

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:text="@string/ge_ren_zhong_xin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_title"/>
  </android.support.v7.widget.Toolbar>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/toolbar"
      android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <RelativeLayout
          android:id="@+id/rl_head_img"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@android:color/white"
          android:paddingBottom="@dimen/spacing_xsmall"
          android:paddingLeft="@dimen/spacing_large"
          android:paddingRight="@dimen/spacing_large"
          android:paddingTop="@dimen/spacing_xsmall">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/head_img"
            android:textSize="@dimen/text_body"/>

        <ImageView
            android:id="@+id/jian_tou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/iconfont_fanhuidingbu"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_toLeftOf="@id/jian_tou"
            tools:src="@mipmap/zaishou"/>
      </RelativeLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/gray"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@android:color/white"
          android:paddingBottom="@dimen/spacing_large"
          android:paddingLeft="@dimen/spacing_large"
          android:paddingRight="@dimen/spacing_large"
          android:paddingTop="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/member_level"
            android:textSize="@dimen/text_body"/>

        <ImageView
            android:id="@id/jian_tou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/iconfont_fanhuidingbu"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_toLeftOf="@id/jian_tou"
            android:src="@mipmap/zaishou"
            android:text="核心会员"/>
      </RelativeLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/gray"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@android:color/white"
          android:paddingBottom="@dimen/spacing_large"
          android:paddingLeft="@dimen/spacing_large"
          android:paddingRight="@dimen/spacing_large"
          android:paddingTop="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/phone_num"
            android:textSize="@dimen/text_body"/>

        <ImageView
            android:id="@id/jian_tou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/iconfont_fanhuidingbu"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_toLeftOf="@id/jian_tou"
            android:src="@mipmap/zaishou"
            tools:text="13883224451"/>
      </RelativeLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/spacing_large"
          android:background="@color/gray"/>

      <RelativeLayout
          android:id="@+id/rl_ne_cheng"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@android:color/white"
          android:paddingBottom="@dimen/spacing_large"
          android:paddingLeft="@dimen/spacing_large"
          android:paddingRight="@dimen/spacing_large"
          android:paddingTop="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/member_name"
            android:textSize="@dimen/text_body"/>

        <ImageView
            android:id="@id/jian_tou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/iconfont_fanhuidingbu"/>

        <TextView
            android:id="@+id/nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_toLeftOf="@id/jian_tou"
            android:src="@mipmap/zaishou"
            tools:text="13883224451"/>
      </RelativeLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/gray"/>

      <RelativeLayout
          android:id="@+id/rl_real_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@android:color/white"
          android:paddingBottom="@dimen/spacing_large"
          android:paddingLeft="@dimen/spacing_large"
          android:paddingRight="@dimen/spacing_large"
          android:paddingTop="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/member_real_name"
            android:textSize="@dimen/text_body"/>

        <ImageView
            android:id="@id/jian_tou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/iconfont_fanhuidingbu"/>

        <TextView
            android:id="@+id/memberName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_toLeftOf="@id/jian_tou"
            android:src="@mipmap/zaishou"
            tools:text="13883224451"/>
      </RelativeLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/gray"/>

      <RelativeLayout
          android:id="@+id/rl_birthday"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@android:color/white"
          android:paddingBottom="@dimen/spacing_large"
          android:paddingLeft="@dimen/spacing_large"
          android:paddingRight="@dimen/spacing_large"
          android:paddingTop="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/birthday"
            android:textSize="@dimen/text_body"/>

        <ImageView
            android:id="@id/jian_tou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/iconfont_fanhuidingbu"/>

        <TextView
            android:id="@+id/dateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_toLeftOf="@id/jian_tou"
            android:src="@mipmap/zaishou"
            tools:text="13883224451"/>
      </RelativeLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/gray"/>

      <RelativeLayout
          android:id="@+id/rl_gender"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@android:color/white"
          android:paddingBottom="@dimen/spacing_large"
          android:paddingLeft="@dimen/spacing_large"
          android:paddingRight="@dimen/spacing_large"
          android:paddingTop="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/gender"
            android:textSize="@dimen/text_body"/>

        <ImageView
            android:id="@id/jian_tou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/iconfont_fanhuidingbu"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_toLeftOf="@id/jian_tou"
            android:src="@mipmap/zaishou"
            tools:text="13883224451"/>
      </RelativeLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/gray"/>

      <RelativeLayout
          android:id="@+id/rl_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@android:color/white"
          android:paddingBottom="@dimen/spacing_large"
          android:paddingLeft="@dimen/spacing_large"
          android:paddingRight="@dimen/spacing_large"
          android:paddingTop="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/email"
            android:textSize="@dimen/text_body"/>

        <ImageView
            android:id="@id/jian_tou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/iconfont_fanhuidingbu"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_toLeftOf="@id/jian_tou"
            android:src="@mipmap/zaishou"
            tools:text="13883224451"/>
      </RelativeLayout>


      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/gray"/>

      <RelativeLayout
          android:id="@+id/rl_bank"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@android:color/white"
          android:paddingBottom="@dimen/spacing_large"
          android:paddingLeft="@dimen/spacing_large"
          android:paddingRight="@dimen/spacing_large"
          android:paddingTop="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/bank_member"
            android:textSize="@dimen/text_body"/>

        <ImageView
            android:id="@id/jian_tou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/iconfont_fanhuidingbu"/>
      </RelativeLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/spacing_large"
          android:background="@color/gray"/>

      <RelativeLayout
          android:id="@+id/rl_change_pwd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="@dimen/spacing_large"
          android:background="@android:color/white"
          android:paddingBottom="@dimen/spacing_large"
          android:paddingLeft="@dimen/spacing_large"
          android:paddingRight="@dimen/spacing_large"
          android:paddingTop="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/change_pwd"
            android:textSize="@dimen/text_body"/>

        <ImageView
            android:id="@id/jian_tou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/iconfont_fanhuidingbu"/>
      </RelativeLayout>
    </LinearLayout>

  </ScrollView>
</RelativeLayout>
